--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button id="scissors">Scissors</button>
         </div>
         <div id="results">
-            
+            <h3 id="roundResult"></h3>
         </div>
         <script src="script.js"></script>
     </body>
