Add html for player and computer scores

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </div>
         <div id="results">
             <h3 id="roundResult"></h3>
+            <p>Player Score: <span id="pScore">0</span></p>
+            <p>Computer Score: <span id="cScore">0</span></p>
         </div>
         <script src="script.js"></script>
     </body>
