--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h3 id="roundResult"></h3>
             <p>Player Score: <span id="pScore">0</span></p>
             <p>Computer Score: <span id="cScore">0</span></p>
+            <h3 id="winner"></h3>
         </div>
         <script src="script.js"></script>
     </body>
